# crusty-dlp

./: .agent-policy.yaml  .gitignore  AGENTS.md  BLOCKY_VISOR_CX23_RUST_REWRITE_ASSESSMENT.md  COMPATIBILITY.md  Cargo.toml  LICENSE  PKGBUILD  README.md  build.rs  config.example.toml  crusty-dlp.install  flake.nix
.codex/: context-groups.md
.github/instructions/: *.instructions.md
.github/workflows/: ci.yml  release.yml
assets/: crusty-dlp.desktop
packaging/: verify-linux-packages.sh
packaging/debian/: postrm
packaging/gentoo/media-video/crusty-dlp/: crusty-dlp-9999.ebuild
plugins/yt_dlp_plugins/extractor/: boyfriendtv.py  ooxxx.py  pmvhaven.py  spankbang.py
src/: app.rs  config.rs  downloader.rs  errors.rs  input.rs  lib.rs  main.rs  redaction.rs  search.rs  ui.rs  urls.rs
tools/: ai-model-router.fish
tools/codex-bridge-archive/: README.md  pyproject.toml  server.py  test_server.py
