[package]
name = "crusty-dlp"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "A small, safe terminal UI for yt-dlp"
repository = "https://github.com/y-bgmpst/crusty-dlp"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "6.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.43", features = ["io-util", "macros", "process", "rt", "sync"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.15"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
