[package]
name = "crusty-dlp"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Safe terminal and desktop interfaces for yt-dlp"
repository = "https://github.com/y-bgmpst/crusty-dlp"
build = "build.rs"

[dependencies]
anyhow = "1.0"
arboard = "3.6"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "6.0"
ratatui = { version = "0.30.2", features = ["crossterm_0_28"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.43", features = ["io-util", "macros", "process", "rt", "sync"] }
toml = "0.8"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
urlencoding = "2.1"
webbrowser = "1.0"

[[bin]]
name = "crusty-dlp"
path = "src/main.rs"

[[bin]]
name = "crusty-dlp-gui"
path = "src/bin/gui.rs"

[dev-dependencies]
tempfile = "3.15"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
