[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-bridge-archive"
version = "0.1.0"
description = "Local redacted transcript archive MCP bridge for Codex"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.scripts]
codex-bridge-archive = "server:main"

[tool.setuptools]
py-modules = ["server"]
